--- a/Map/Info.plist
+++ b/Map/Info.plist
@@ -26,6 +26,10 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>esta app quiere obtener tu ubicacion</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>permisos de ubicacion</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
